API ENTIDAD/toCluster/02_deployment.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: entidad-env
  name: entidad-env
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: entidad-env
  template:
    metadata:
      labels:
        app: entidad-env
    spec:
      containers:
      - image: docker-registry.default.svc:5000/entidad-env/entidad-env:latest
        imagePullPolicy: IfNotPresent
        name: entidad-env
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 768Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - entidad-env
      from:
        kind: ImageStreamTag
        name: entidad-env:latest
        namespace: entidad-env
