API ENTIDAD/toCluster/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: entidad-env
  name: entidad-env
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: entidad-env
