API ENTIDAD/toCluster/04_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: entidad-env
  name: entidad-env
spec:
  host: entidad-env.ocdev.ansc.gob.pe
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: entidad-env
    weight: 100
  wildcardPolicy: None
